# toy-robot-challenge

./: .gitignore  README.md  package-lock.json  pyproject.toml  tox.ini
api/: app.py  routes.py  schema.py
tests/: conftest.py  test_api.py
ui/: .eslintrc.js  package-lock.json  package.json
ui/src/components/: SVGTriangle.svelte
ui/src/routes/: +page.svelte
